# embedlib

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
array_utils/: CMakeLists.txt  array_map.h  array_queue.h  test_array_map.c  test_array_queue.c
depends/: CMakeLists.txt
rbtree/: CMakeLists.txt  rbtree.c  rbtree.h  rbtree_compact.c  rbtree_compact.h  test_rbtree.c
sort/: sort.h
